--- a/portfolio.css
+++ b/portfolio.css
@@ -14,7 +14,7 @@
   }
   
   ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: #50cf1e;
   }
   
   .loader_bg {
@@ -105,7 +105,7 @@
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: #1e3551;
+    color: #1894aa;
     padding: 0 5px;
     transform: translateX(-50%);
   }
@@ -498,11 +498,11 @@
   }
   
   .skills-content .right .bootstraps::before {
-    width: 0.1%;
+    width: 90%;
   }
   
   .skills-content .right .django::before {
-    width: 0.1%;
+    width: 70%;
   }
   
 /* removed */
